[package]

name = "music_player"
version = "0.5.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

[[bin]]
name = "music_player"

[dependencies.rust-sfml]
git = "https://github.com/jeremyletang/rust-sfml.git"

[dependencies.rust-fmod]
git = "https://github.com/GuillaumeGomez/rust-fmod.git"